SwiftLint.yml: Change the limit of the line_length rule and add shorthand_operator
Adding shorthand_operator to the list of rules until we fix it, as well as upping the limit of the line_length until we decide on a specific number

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -27,7 +27,8 @@ disabled_rules:
     - xctfail_message
     - compiler_protocol_init
     - reduce_boolean
-
+    - shorthand_operator
+    
 included:
     - Source
     - Tests
@@ -37,5 +38,5 @@ included:
 # the few violations. Repeat this until we find suitable limits.
 
 line_length:
-    warning: 250
-    error: 250
+    warning: 500
+    error: 500
